version 0.4.0 hotfix_1 | fix navbar z-index

--- a/css_bank/main_style.css
+++ b/css_bank/main_style.css
@@ -298,6 +298,7 @@ article {
     width: 100%;
     margin: 0%;
     padding: 0%;
+    z-index: 999;
 }
 
 .navbar ul {
